[B]Retrospect v4.1.8.19 - Changelog - 2019-05-13[/B]

!! Due to the changing of the add-on ID, there is an extra add-on data migration step required. This happens as soon as you install the new version. !!

[B]Framework related[/B]
-

[B]GUI/Settings/Language related[/B]
* Changed: dates are shown a bit more dim for folders
* Updated: show geo/drm warning symbols in yellow

[B]Channel related[/B]
* Fixed: ViaFree changed their JSON....again....and broke the main listing (Fixes #1163)
* Removed: TV.nl channel as none of them worked anymore
* Fixed: L1 did not work at all
* Fixed: Omroep Flevoland
* Removed: ATV as it broke a long time ago
* Fixed: AT5 would not work
* Fixed: fallback to other streams if embedded stream configuration is missing for kijk.nl