@@ -6,7 +6,7 @@ sonar.projectKey=Retrospect
 # sonar.login=%SONAR_TOKEN%
 
 sonar.projectName=Retrospect
-sonar.projectVersion=4.1.8.19
+sonar.projectVersion=4.1.8.20
 
 sonar.sources=.
 sonar.exclusions=net.rieter.xot/resources/libs/pyscrypt/*,net.rieter.xot/resources/libs/pyaes/*,net.rieter.xot/resources/libs/pyamf/**,net.rieter.xot/resources/libs/pyamf/*,net.rieter.xot/resources/libs/debug/**, **/*.pyc,**/*.pyo,net.rieter.xot/debugrun.py,net.rieter.xot/apiserver.py,plugin.video.retrospect/resources/libs/pyscrypt/*,plugin.video.retrospect/resources/libs/pyaes/*,plugin.video.retrospect/resources/libs/pyamf/**,plugin.video.retrospect/resources/libs/pyamf/*,plugin.video.retrospect/resources/libs/debug/**, **/*.pyc,**/*.pyo,plugin.video.retrospect/debugrun.py,plugin.video.retrospect/apiserver.py
